Internal - indicates an internal change - information for FRD developers - nothing important for users

September 2012 - FreeRapid Downloader 0.9
  Added : After in-depth consideration, all non-updated translations were enabled, bringing the total number of
          supported languages to 31. Missing strings will appear in English. Updates to translations are warmly welcome,
          as usual.
  Added : new action in menu Help -> Browse config folder
  Changes, which regular users don't see:
  Changed : Internal - the file list (include file history list) is stored in the database
  Changed : Internal - moved plugins directory from the root directory of FRD into config directory in user settings folder
  Changed : Internal - app.log file is created in the main config directory (previous location was a root of FRD)


13th November 2011 - FreeRapid Downloader 0.86 Update 1
  Added : Support for Slovakian, Bulgarian and Hungarian languages - thanks to all translators!
  Added : New internal property - -DpopWindowWithoutMainFrame in quiet mode, default value is false,
          see startup.properties file for more details
  Added : New internal property - -DcharEncodingForPropertiesFiles defines character encoding for properties files,
          see startup.properties file for more details
  Added : New internal property - -DopenIncompleteFiles - makes possible to open .part files from GUI while downloading
  Added : New file start.bat in FRD directory to allow launch FRD without frd.exe
  Changed : User preferences dialog opens faster
  Thanks to all bug reporters:
  Fixed : Updated JTattoo look and feel, which fixes a bug where the main window shows over the taskbar
  Fixed : Updated Quaqua look and feel, which fixes certain regressions in 0.86 on Mac OS X
  Fixed : Unable to deselect "Use proxy list" - regression in 0.86
  Fixed : Unable to view dialog for settings of selected files - regression in 0.86
  Fixed : NullpointerException fix for PasswordAuthentication